--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-utomator script to transform ppt into pdf. Dunno how it will render on Github, just a test.
+Automator script to transform ppt into pdf.
